Fix footer, footer was overlapping contents when page is scrollable.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@ a {
     width: 960px;
     margin: auto;
     padding-bottom: 100px;
+    margin-bottom: 10%;
 }
 
 h2 {
@@ -260,4 +261,5 @@ hr {
 
 a:hover {
     opacity: 0.7;
+    font-family: Arial, Helvetica, sans-serif;
 }
